--- a/home.html
+++ b/home.html
@@ -36,16 +36,26 @@
     </div>
 
   
-    <div class="row mt-4">
-      <div class="col-md-4">
-        <img src="https://img.freepik.com/free-photo/top-view-table-full-delicious-food-composition_23-2149141353.jpg" class="img-fluid rounded" alt="Travel" />
+   <div id="imageCarousel" class="carousel slide mt-4" data-bs-ride="carousel" data-bs-interval="3000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://img.freepik.com/premium-photo/income-expenses-concept-with-yellow-background-3d-rendering_519469-343.jpg" class="d-block w-100 rounded" alt="Travel">
+        </div>
+        <div class="carousel-item">
+          <img src="https://c1.wallpaperflare.com/preview/972/400/963/money-home-coin-investment.jpg" class="d-block w-100 rounded" alt="Food">
+        </div>
+        <div class="carousel-item">
+          <img src="https://cdn.corporatefinanceinstitute.com/assets/money-2.jpeg" class="d-block w-100 rounded" alt="Saving Money">
+        </div>
       </div>
-      <div class="col-md-4">
-        <img src="https://t4.ftcdn.net/jpg/00/65/48/25/360_F_65482539_C0ZozE5gUjCafz7Xq98WB4dW6LAhqKfs.jpg" class="img-fluid rounded" alt="Food" />
-      </div>
-      <div class="col-md-4">
-        <img src="https://cdn.corporatefinanceinstitute.com/assets/money-2.jpeg" class="img-fluid rounded" alt="Saving Money" />
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
 
