--- a/transaction.html
+++ b/transaction.html
@@ -6,6 +6,7 @@
   <title>Expense Tracker Dashboard & Transactions</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <style>
   .dark-mode {
@@ -80,7 +81,7 @@
         </div>
         <div class="col-md-6">
           <label for="category" class="form-label">Category:</label>
-          <select id="category" class="form-select" required >
+          <select id="category" class="form-select" required>
             <option value="food">Food</option>
             <option value="travel">Travel</option>
             <option value="entertainment">Entertainment</option>
@@ -95,22 +96,18 @@
         <div class="col-md-12">
           <button type="submit" class="btn btn-success w-100 mt-3">Add Transaction</button>
         </div>
-        <br>
-        <br>
       </form>
-      <br>
-      <br>
-      <section id="expenses-list" class="mb-5">
-        <h2 class="text-center mb-4">Expenses List</h2>
-        <ul id="expensesList" class="list-group">
-        </ul>
+    </section>
+    <section id="expenses-list" class="mb-5">
+      <h2 class="text-center mb-4">Expenses List</h2>
+      <ul id="expensesList" class="list-group"></ul>
+      <button id="exportPDF" class="btn btn-success w-100 mt-4">Export to PDF</button>
     </section>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
-
-
 
 
