--- a/home.html
+++ b/home.html
@@ -27,8 +27,10 @@
         <ul class="navbar-nav ms-auto">
           
           <li class="nav-item"><a class="nav-link" href="transaction.html">Add Transaction</a></li>
+          <li class="nav-item"><a class="nav-link" href="goal.html">Set Goal</a></li>
           <li class="nav-item"><a class="nav-link" href="categories.html">Categories</a></li>
           <li class="nav-item"><a class="nav-link" href="login.html">Profile</a></li>
+          
         </ul>
       </div>
     </div>
