--- a/goal.html
+++ b/goal.html
@@ -33,6 +33,6 @@
     <button id="backToDashboard" class="btn btn-success w-100 mt-4">Back to Dashboard</button>
   </div>
 
-  <script src="main.js"></script>
+  <script src="goal.js"></script>
 </body>
 </html>
